# SCC-Flask-Server

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.bat  setup.sh
backend/: Dockerfile  requirements.txt  run.py
backend/app/: __init__.py  config.py  realtime.py
backend/app/alarms/: __init__.py  lifecycle.py  rules.py
backend/app/api/: auth.py  firmware.py  routes.py
backend/app/database/: models.py
backend/app/ml/: __init__.py  predictor.py
backend/app/mpc/: __init__.py  advisory.py
backend/tests/: test_alarm_rules.py  test_api_auth.py  test_firmware_api.py  test_mpc_advisory.py  test_nuc_gateway.py  test_telemetry_parser.py
database/: schema.sql  seed.sql
docs/: SCC 316 TDM.docx  architecture.md  deployment_guide.md  firmware_ota.md  hardware_block_diagram.md  hardware_block_diagram.mmd  mpc_design.md  operation_guide.md  safety.md  state_machine_diagram.md  state_machine_diagram.mmd  telemetry_format.md  verification_validation.md  ~$C 316 TDM.docx
docs/Code Resources/: NTC calibration.xlsx
docs/Design File/: 316 Updated Drawing v1.dwg  Corrosion Cell CAD.step
firmware/arduino/: README.md
firmware/esp32/: README.md
frontend/hmi-dashboard/: index.html  package-lock.json  package.json  vite.config.ts
models/: README.md
mosquitto/: mosquitto.conf
notebooks/: model_validation.ipynb  pump_cycle_analysis.ipynb  train_siso_thermal_model.ipynb
tests/: README.md
tests/heater-testing/: README.md
tests/motor-testing/: README.md
tests/ntc-testing/: README.md
tests/telemetry-pipeline/: README.md
(+111 files in other folders)
