[project]
name = "scc-control-platform"
version = "0.1.0"
description = "ESP32, Flask, PostgreSQL, ML/MPC, and HMI dashboard platform for thermal SCC/corrosion rig research."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "Flask",
  "Flask-Cors",
  "Flask-SQLAlchemy",
  "Flask-Migrate",
  "psycopg2-binary",
  "SQLAlchemy",
  "pandas",
  "numpy",
  "scikit-learn",
  "joblib",
  "matplotlib",
  "plotly",
  "APScheduler",
  "python-dotenv",
  "gunicorn",
  "requests",
  "xgboost",
  "lightgbm",
  "alembic",
  "pytest",
  "pytest-flask",
  "websockets"
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
